Ajustes para rodar no Docker